[project]
version = "0.1.0"
name = 'coffee_shop'
description = "A Coffee Order Management System"
readme = "README.md"
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Silvanos Eric" }]
requires-python = ">=3.8.13"
dependencies = ["pytest>=8.3.3"]

[project.urls]
Source = 'https://github.com/silvanos-eric/coffee_shop.git'
